# TheoryMachine_Homework

./: README.md
project1/: CMakeLists.txt
project1/src/: cys.cpp  main.cpp
project2/src/: cys.cpp  main.cpp
